@@ -1,9 +1,18 @@
 {{$NEXT}}
 
+      [BUG FIXES]
+
+      - Colorization is now disabled by default when the output is being piped or
+      redirected to a file.  This improves interoperability with tools like grep,
+      sort, etc.  To for colorization, use the --color option.  Fixes GH #155.
+      Thanks @mar-kolya.
+
       [ENHANCEMENTS]
 
       - When using the "add" command, the paths to the local archives can now be
       expressed using file:// URLs.
+
+      [DOCUMENTATION]
 
       - Revised the Tutorial and QuickStart documentation.
 
